deployment/deployment-streamlit.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: facemask-demo
  namespace: facemask

spec:
  replicas: 1

  selector:
    matchLabels:
      app: facemask-demo

  template:
    metadata:
      labels:
        app: facemask-demo

    spec:
      containers:
        - name: facemask-demo

          image: ngdangkhoa/facemask-demo:v1

          imagePullPolicy: Always

          ports:
            - containerPort: 8501
