deployment/service-streamlit.yaml
apiVersion: v1
kind: Service

metadata:
  name: facemask-demo-service
  namespace: facemask

spec:
  selector:
    app: facemask-demo

  ports:
    - protocol: TCP
      port: 8501
      targetPort: 8501

  type: ClusterIP
