deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: facemask-ingress
  namespace: facemask

spec:
  ingressClassName: traefik

  rules:
    - http:
        paths:

          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: facemask-api-service
                port:
                  number: 8000

          - path: /openapi.json
            pathType: Prefix
            backend:
              service:
                name: facemask-api-service
                port:
                  number: 8000

          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: facemask-api-service
                port:
                  number: 8000

          - path: /models
            pathType: Prefix
            backend:
              service:
                name: facemask-api-service
                port:
                  number: 8000

          - path: /
            pathType: Prefix
            backend:
              service:
                name: facemask-demo-service
                port:
                  number: 8501
